# rustnn

./: AGENTS.md  CLAUDE.md  Cargo.toml  DOCS_SUMMARY.md  DOCUMENTATION.md  FLOAT16_STATUS.md  MANIFEST.in  Makefile  README.md  README_PYTHON.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  TODO.txt  build.rs  mkdocs.yml  pyproject.toml  test_expand_simple.py  test_float16_both.py  test_float16_debug.py  test_float16_input_compute.py  test_float16_input_export.py  test_float16_input_leaky.py  test_float16_sizes.py  test_float16_wpt_size.py  test_gather_debug.py  test_leaky_debug.py
.claude/agents/: rustnn-validator.md
.claude/plans/: opaque-tensors.md  tensor-api-refactoring.md
.github/workflows/: README.md  ci.yml  docs-pr.yml  docs.yml  publish-pypi.yml  publish.yml
docs/: README.md  advanced.md  api-reference.md  architecture.md  chromium-comparison.md  coreml-fixes-session-2025-12-14.md  development.md  float16-investigation.md  getting-started.md  ggml-integration-guide.md  implementation-status.md  index.md  operator-status.md  rustnn-comprehensive-overview.md  tensorrt-integration-guide.md  webnn_static_shapes_limitation.md  windows-tensorrt-setup.md  wpt-integration-plan.md  wpt-test-guide.md
docs/development/: CLAUDE.md  code-coverage.md  setup.md
docs/reference/: operators-explanation.md
examples/: Makefile  README.md  image_classification.py  kv_cache_device_tensors.py  sample_graph.json  sample_graph.webnn  sample_text.txt  save_load_example.py  smollm_135_webnn_demo.py  t5_small_webnn.py  test_converted_onnx.py  test_original_onnx.py  test_quantization_roundtrip.py  test_smollm_preallocated_cache.py  test_smollm_prompt_only.py  test_smollm_seq1.py  text_generation_enhanced.py  text_generation_gpt.py  toy_transformer.json  toy_transformer.webnn  train_text_model.py
examples/experimental/: smollm_baseline_transformers.py  smollm_cached_demo.py  smollm_twophase_demo.py
presentations/: Makefile  mermaid.html  reveal-overrides.css  rustnn_slides.html  rustnn_slides.md
python/webnn/: __init__.py  __init__.pyi
scripts/: compare_onnx_graphs.py  convert_wpt_tests.py  regenerate_debug_onnx.py  validate_coreml.py  validate_onnx.py
site/: 404.html  index.html  sitemap.xml
site/advanced/: index.html
site/api-reference/: index.html
site/architecture/: index.html
site/chromium-comparison/: index.html
site/coreml-fixes-session-2025-12-14/: index.html
site/coreml-weight-files-implementation/: index.html
site/development/: index.html
site/examples/: index.html
site/float16-investigation/: index.html
site/getting-started/: index.html
site/ggml-integration-guide/: index.html
site/implementation-status/: index.html
site/operator-status/: index.html
site/performance-benchmarks/: index.html
site/rustnn-comprehensive-overview/: index.html
site/search/: search_index.json
site/tensorrt-integration-guide/: index.html
site/webnn-spec-reference/: index.html
site/windows-tensorrt-setup/: index.html
site/wpt-integration-plan/: index.html
site/wpt-test-guide/: index.html
src/: CLAUDE.md  debug.rs  error.rs  graph.rs  graphviz.rs  lib.rs  loader.rs  main.rs  protos.rs  shape_inference.rs  tensor.rs  validator.rs  webnn_json.rs
src/converters/: CLAUDE.md  coreml.rs  coreml_mlprogram.rs  mod.rs  onnx.rs
src/executors/: coreml.rs  onnx.rs
src/python/: context.rs  graph.rs  graph_builder.rs  operand.rs  tensor.rs
tests/: test_device_tensors.py  test_python_api.py  test_wpt_conformance.py
tests/wpt_data/conformance/: abs.json  add.json  average_pool2d.json  batch_normalization.json  cast.json  ceil.json  clamp.json  concat.json  conv2d.json  conv_transpose2d.json  div.json  elu.json  equal.json  exp.json  expand.json  floor.json  gather.json  greater.json  greater_or_equal.json  hard_sigmoid.json  hard_swish.json  instance_normalization.json  layer_normalization.json  leaky_relu.json  lesser.json  lesser_or_equal.json  linear.json  log.json  logical_not.json  matmul.json  max.json  max_pool2d.json  min.json  mul.json  neg.json  pow.json  reduce_l1.json  reduce_l2.json  reduce_log_sum.json  reduce_log_sum_exp.json  (+16 more)
tests/wpt_data/validation/: cast.json  clamp.json  concat.json  conv2d.json  elu.json  expand.json  gather.json  linear.json  matmul.json  relu.json  reshape.json  sigmoid.json  slice.json  softmax.json  split.json  tanh.json  transpose.json
