[package]
name = "rustnn"
version = "0.5.11"
edition = "2024"
description = "W3C WebNN implementation with ONNX, CoreML, and TensorRT backends [DO NOT USE IN PRODUCTION - Development Release]"
license = "Apache-2.0"
repository = "https://github.com/rustnn/rustnn"
keywords = ["webnn", "onnx", "coreml", "tensorrt", "neural-networks"]
categories = ["science", "api-bindings"]
exclude = [
    "site/*",
    "docs/*",
    "tests/*",
    "examples/*",
    ".github/*",
    "*.md",
    "!README.md",
]

[features]
default = []
coreml-runtime = ["objc"]
onnx-runtime = ["ort", "ndarray"]
trtx-runtime = ["trtx"]
trtx-runtime-mock = ["trtx/mock"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["base64"] }
thiserror = "1.0"
base64 = "0.22"
prost = "0.12"
prost-types = "0.12"
bytes = "1.6"
bytemuck = { version = "1.15", features = ["extern_crate_std"] }
ndarray = { version = "0.16", optional = true }
objc = { version = "0.2", optional = true }
ort = { version = "2.0.0-rc.11", optional = true, features = ["ndarray", "half", "load-dynamic"] }
half = "2.4"
trtx = { version = "0.2.0", optional = true }
regex = "1.11"
webnn-graph = { git = "https://github.com/rustnn/webnn-graph", branch = "main" }
webnn-onnx-utils = { git = "https://github.com/rustnn/webnn-onnx-utils", branch = "main" }

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "rustnn"
crate-type = ["rlib"]
doctest = false
